fixed the filebrowser overlap of the navbar

--- a/client/app/app.scss
+++ b/client/app/app.scss
@@ -67,7 +67,9 @@ $secondary-text: $lBlack;
 	}
 }
 
-
+md-backdrop.md-sidenav-backdrop {
+	z-index: 62 !important;
+}
 
 /* inject:scss */
 @import 'audioSandbox/mdWavesurferPlayer/mdWavesurferPlayer';
