--- a/client/components/navbar/navbar.scss
+++ b/client/components/navbar/navbar.scss
@@ -1,6 +1,7 @@
 md-toolbar.nav-content {
 	//height: 64px;
 	//overflow: hidden;
+	z-index: 61;
 
 	md-input-container {
 		margin: 0;
